--- a/src/main/res/layout/activity_debug.xml
+++ b/src/main/res/layout/activity_debug.xml
@@ -7,6 +7,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.i906.mpt.extension.countdownview.ui.MainActivity">
+    tools:context="com.i906.mpt.extension.countdown.ui.DebugActivity">
 
 </FrameLayout>
