--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -5,6 +5,10 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="InfoTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+    </style>
+
     <!-- Prayer Countdown -->
 
     <style name="PrayerCountdown" />
